--- a/src/styles/certificate.scss
+++ b/src/styles/certificate.scss
@@ -1,3 +1,47 @@
-.certificate {
-  padding: 120px 0 166px;
+.certificate{
+  padding: 120px;
+
+  &__row{
+    display: flex;
+    column-gap: 135px;
+    align-items: center;
+    position: relative;
+  }
+
+  &__left{
+    width: calc(50% - 81px);
+    &-logo{
+      gap: 40px;
+    }
+  }
+  &__title{
+    color: var(--gray-900, #1E212C);
+    font-size: 46px;
+    font-weight: 900;
+    line-height: 130%;
+    display: flex;
+    flex-direction: column;
+    span{
+      font-size: 16px;
+      font-weight: 700;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+    }
+  }
+
+  &__deck{
+    color: var(--gray-800, #424551);
+    font-weight: 400;
+    line-height: 160%; /* 25.6px */
+    margin-top: 48px;
+  }
+  &__right{
+    position: absolute;
+    justify-content: center;
+    left: 527px;
+    top: 6px;
+    &-img{
+      width: 100%;
+    }
+  }
 }
