--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -1,22 +1,25 @@
 .events {
   padding: 80px 0 85px;
   background: #ffdad5;
-  &__list{
+  &__list {
     display: flex;
     flex-direction: column;
     row-gap: 24px;
     margin-bottom: 65px;
-    &-item{
+
+    &-item {
       display: flex;
       justify-content: space-between;
       border-radius: 4px;
       background: var(--white, #FFF);
       padding: 32px 40px;
-      &:hover{
+
+      &:hover {
         box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(255, 63, 58, 0.08), 0px 30px 24px -10px rgba(255, 63, 58, 0.10), 0px 80px 80px -20px rgba(255, 63, 58, 0.16);
       }
     }
   }
+
   &__date {
     display: flex;
     column-gap: 20px;
@@ -42,7 +45,8 @@
       }
     }
   }
-  &__info{
+
+  &__info {
     color: var(--gray-900, #1E212C);
     font-size: 20px;
     font-weight: 500;
@@ -57,7 +61,8 @@
       font-weight: 400;
     }
   }
-  &__btn{
+
+  &__btn {
     padding: 13px 30px;
     border-radius: 4px;
     border: 1px solid var(--btn-gradient, #FF3F3A);
@@ -67,25 +72,28 @@
     font-weight: 900;
     letter-spacing: 0.5px;
     cursor: pointer;
-    &:hover{
+
+    &:hover {
       background: #FF3F3A;
       color: #FFFFFF;
-      .events__list-item{
+
+      .events__list-item {
         box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(255, 63, 58, 0.08), 0px 30px 24px -10px rgba(255, 63, 58, 0.10), 0px 80px 80px -20px rgba(255, 63, 58, 0.16);
       }
     }
   }
-  &__end{
-      display: inline-flex;
-      align-items: center;
-      column-gap: 36px;
-    justify-content: space-between;
+  &__center{
+    display: flex;
+    justify-content: center;
+    border-radius: 4px;
+    column-gap: 40px;
     &-title{
       color: var(--gray-900, #1E212C);
       font-size: 28px;
-      font-weight: 700;
-     }
-
+       font-weight: 700;
+      line-height: 150%;
+    }
   }
-
 }
+
+
