--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -27,6 +27,114 @@
   cursor: pointer;
 }
 
+.overlay {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+  background: var(--gray-900, rgba(30, 33, 44, 0.4588235294));
+}
+
+.popup {
+  position: relative;
+  width: 486px;
+  padding: 48px 0;
+  border-radius: 4px;
+  border: 1px solid var(--gray-300, #E5E8ED);
+  background: var(--white, #FFF);
+  box-shadow: 0 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(30, 33, 44, 0.08), 0px 26px 24px -10px rgba(30, 33, 44, 0.1), 0px 60px 80px -20px rgba(30, 33, 44, 0.16);
+}
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  font-size: 20px;
+}
+.popup__form {
+  padding: 0 48px 24px;
+  display: flex;
+  flex-direction: column;
+}
+.popup__form-title {
+  color: var(--gray-900, #1E212C);
+  text-align: center;
+  font-size: 28px;
+  font-weight: 700;
+}
+.popup__form-desc {
+  color: var(--gray-700, #787A80);
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+  margin: 24px 0;
+}
+.popup__form-label {
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+  margin-bottom: 20px;
+}
+.popup__form-field {
+  border-radius: 4px;
+  border: 1px solid var(--gray-400, #D7DADD);
+  background: var(--white, #FFF);
+  height: 44px;
+  padding-left: 16px;
+  outline: none;
+}
+.popup__form-field::placeholder {
+  color: #9A9CA5;
+  font-size: 14px;
+  font-weight: 400;
+}
+.popup__form-labelCheck {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--primary, #FF3F3A);
+  text-align: right;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 24px;
+}
+.popup__form-labelCheck div {
+  display: flex;
+  column-gap: 12px;
+  color: var(--gray-800, #424551);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+}
+.popup__socials {
+  padding-top: 24px;
+  border-top: 1px solid #E5E8ED;
+}
+.popup__socials-text {
+  color: var(--gray-700, #787A80);
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 16px;
+}
+.popup__socials-icons {
+  display: flex;
+  justify-content: center;
+  column-gap: 12px;
+}
+.popup__socials-link svg path {
+  fill: #787A80;
+}
+.popup__socials-link:hover {
+  fill: #FF3F3A;
+}
+
 .header {
   background: #ffdad5;
   padding: 20px 0;
@@ -66,9 +174,110 @@
   cursor: pointer;
   border: none;
 }
+.header__burgerMenu {
+  display: none;
+}
+.header__burgerMenu-links {
+  display: flex;
+  column-gap: 30px;
+}
+.header__burgerMenu-btns {
+  display: flex;
+  column-gap: 30px;
+  align-items: center;
+}
+.header__burger {
+  width: 50px;
+  height: 45px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  padding: 0 5px;
+}
+.header__burger span {
+  width: 100%;
+  height: 3px;
+  background: #1E212C;
+  position: relative;
+  border-radius: 3px;
+}
+.header__burger span::before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  width: 100%;
+  height: 3px;
+  background: #1E212C;
+  border-radius: 3px;
+}
+.header__burger span::after {
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  width: 100%;
+  height: 3px;
+  background: #1E212C;
+  border-radius: 3px;
+}
+.header__burger.active span {
+  background: transparent;
+}
+.header__burger.active span::before {
+  top: 0;
+  transform: rotate(45deg);
+}
+.header__burger.active span::after {
+  top: 0;
+  transform: rotate(-45deg);
+}
 
+@media (max-width: 992px) {
+  .header__links, .header__right {
+    display: none;
+  }
+  .header__burgerMenu {
+    display: flex;
+    column-gap: 40px;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    background: #FFF;
+    padding: 20px 0;
+    top: -100%;
+    left: 0;
+    transform: translateY(-100%);
+    border-radius: 0 0 20px 20px;
+  }
+  .header__burgerMenu.active {
+    top: 0;
+    transform: translateY(0%);
+  }
+  .header__burger {
+    display: flex;
+  }
+}
+@media (max-width: 768px) {
+  .header__burgerMenu {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+}
+@media (max-width: 500px) {
+  .header__burgerMenu-links a {
+    font-size: 15px;
+  }
+}
+@media (max-width: 425px) {
+  .header__burgerMenu-links, .header__burgerMenu-btns {
+    flex-direction: column;
+    row-gap: 20px;
+    text-align: center;
+  }
+}
 .enjoy {
-  padding: 127px 0 80px;
+  padding: 128px 0 80px;
   background: #ffdad5;
 }
 .enjoy__row {
@@ -138,6 +347,67 @@
   padding: 40px;
 }
 
+@media (max-width: 992px) {
+  .header__links, .header__right {
+    display: none;
+  }
+  .header__burgerMenu {
+    display: flex;
+    column-gap: 40px;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    background: #FFF;
+    padding: 20px 0;
+    top: -100%;
+    left: 0;
+    transform: translateY(-100%);
+    border-radius: 0 0 20px 20px;
+  }
+  .header__burgerMenu.active {
+    top: 0;
+    transform: translateY(0%);
+  }
+  .header__burger {
+    display: flex;
+  }
+}
+@media (max-width: 992px) {
+  .enjoy__left-title {
+    font-size: 50px;
+  }
+}
+@media (max-width: 768px) {
+  .enjoy__right {
+    display: none;
+  }
+  .enjoy__left {
+    width: 100%;
+    text-align: center;
+  }
+  .enjoy__left-y {
+    justify-content: center;
+  }
+  .enjoy__left-btns {
+    justify-content: center;
+  }
+  .enjoy__bottom {
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 20px;
+    margin-top: 110px;
+  }
+  .enjoy__bottom-card {
+    width: 50%;
+    justify-content: center;
+  }
+}
+@media (max-width: 500px) {
+  .enjoy {
+    padding: 60px 0 80px;
+  }
+}
 .question {
   padding: 180px 0;
 }
@@ -184,6 +454,31 @@
   line-height: 140%;
 }
 
+@media (max-width: 768px) {
+  .question {
+    padding: 80px 0;
+  }
+}
+@media (max-width: 992px) {
+  .question__left {
+    display: none;
+  }
+  .question__right {
+    width: 100%;
+    text-align: center;
+  }
+  .question__list {
+    align-items: center;
+  }
+}
+@media (max-width: 500px) {
+  .question {
+    padding: 80px 0;
+  }
+  .question__list-text {
+    text-align: start;
+  }
+}
 .featured {
   padding-bottom: 180px;
 }
@@ -402,20 +697,62 @@
 .events__btn:hover .events__list-item {
   box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(255, 63, 58, 0.08), 0px 30px 24px -10px rgba(255, 63, 58, 0.1), 0px 80px 80px -20px rgba(255, 63, 58, 0.16);
 }
-.events__end {
-  display: inline-flex;
-  align-items: center;
-  column-gap: 36px;
-  justify-content: space-between;
+.events__center {
+  display: flex;
+  justify-content: center;
+  border-radius: 4px;
+  column-gap: 40px;
 }
-.events__end-title {
+.events__center-title {
   color: var(--gray-900, #1E212C);
   font-size: 28px;
   font-weight: 700;
+  line-height: 150%;
 }
 
 .certificate {
-  padding: 120px 0 166px;
+  padding: 120px;
+}
+.certificate__row {
+  display: flex;
+  column-gap: 135px;
+  align-items: center;
+  position: relative;
+}
+.certificate__left {
+  width: calc(50% - 81px);
+}
+.certificate__left-logo {
+  gap: 40px;
+}
+.certificate__title {
+  color: var(--gray-900, #1E212C);
+  font-size: 46px;
+  font-weight: 900;
+  line-height: 130%;
+  display: flex;
+  flex-direction: column;
+}
+.certificate__title span {
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.certificate__deck {
+  color: var(--gray-800, #424551);
+  font-weight: 400;
+  line-height: 160%; /* 25.6px */
+  margin-top: 48px;
+}
+.certificate__right {
+  position: absolute;
+  justify-content: center;
+  left: 527px;
+  top: 6px;
+}
+.certificate__right-img {
+  width: 100%;
 }
 
 .team {
@@ -573,6 +910,8 @@
 }
 .post__card {
   width: calc(33.33333% - 20px);
+  position: relative;
+  margin-top: 60px;
 }
 .post__card-img {
   width: 100%;
@@ -581,6 +920,7 @@
   display: flex;
   align-items: center;
   column-gap: 12px;
+  margin: 16px 0 8px;
 }
 .post__card-marketing {
   color: var(--gray-700, #787A80);
@@ -600,6 +940,7 @@
   font-size: 20px;
   font-weight: 700;
   line-height: 150%;
+  margin: 8px 0 8px;
 }
 .post__card-desc {
   color: var(--gray-800, #424551);
@@ -641,7 +982,7 @@
   width: 30%;
 }
 .footer__left-info {
-  color: var(--white, #FFF);
+  color: #a5a6aa;
   font-size: 12px;
   font-weight: 400;
   line-height: 150%;
@@ -657,6 +998,111 @@
 }
 .footer__left-link:hover svg path {
   fill: #FFFFFF;
+}
+.footer__center {
+  display: flex;
+  column-gap: 80px;
+}
+.footer__center-menu {
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+}
+.footer__center-title {
+  color: var(--white, #FFF);
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-bottom: 4px;
+}
+.footer__center-item a {
+  color: #a5a6aa;
+  font-weight: 400;
+}
+.footer__bottom {
+  padding: 19px 0;
+  background: #2a2c37;
+}
+.footer__bottom-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer__bottom-all {
+  display: flex;
+  align-items: center;
+  color: var(--white, #FFF);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 150%; /* 18px */
+}
+.footer__bottom-go {
+  color: #a5a6aa;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 150%; /* 21px */
+}
+.footer__right-label {
+  display: block;
+  margin: 24px 0 12px;
+  position: relative;
+}
+.footer__right-add {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 12px;
+  width: 16px;
+  height: 16px;
+  cursor: pointer;
+}
+.footer__right-input {
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.12);
+  padding: 9px 12px;
+  color: white;
+}
+.footer__right-input::placeholder {
+  color: var(--white, #FFF);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 150%;
+}
+.footer__right-desc {
+  color: var(--white, #FFF);
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.school {
+  padding: 120px;
+  background: #ffdad5;
+}
+.school__title {
+  color: var(--gray-900, #1E212C);
+  text-align: center;
+  font-size: 46px;
+  font-weight: 900;
+  line-height: 130%; /* 59.8px */
+  margin-bottom: 60px;
+}
+.school__suptitle {
+  color: var(--gray-900, #1E212C);
+  text-align: center;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.school__btn {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.school__btn input {
+  padding: 13px 271px 13px 16px;
 }
 
 /*# sourceMappingURL=style.css.map */
